# linglong-store

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: main.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md  suggested_commands.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
docs/: 代码逻辑冗余审查报告-2026-03-10.md  代码逻辑冗余整改-issue清单-2026-03-10.md  代码逻辑冗余整改计划-2026-03-10.md  当前仓库需求清单-2026-03-18.md  性能严重问题修复清单-2026-03-10.md  玲珑进程页体验优化需求文档.md  项目性能审查报告-2026-03-10.md
scripts/: generate_app_list_seeds.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/services/: executor.rs  linglong.rs  linglong_env.rs  linglong_env_install.rs  linglong_env_parser.rs  mod.rs  network.rs  process.rs  prune.rs  self_update.rs
src-tauri/src/services/install/: desktop.rs  installer.rs  mod.rs  models.rs  operations.rs  progress_emitter.rs  slot.rs  state_machine.rs
src-tauri/src/utils/linux/: mod.rs  xdg.rs
src/apis/: constants.ts  index.ts  request.ts  types.ts
src/hooks/: launch.ts  useAppInstall.ts  useAppUninstall.ts  useApplicationCardModel.ts  useAutoLoadWhenNotScrollable.ts  useCachedPaginatedList.ts  useGlobalInstallProgress.ts  useKeepAliveVisibility.ts  useLinglongEnv.ts  useSelfUpdate.ts  (+3 more)
(+51 files in other folders)
