[package]
name = "linglong-store"
version = "2.2.0"
description = "玲珑应用商店社区版"
authors = ["Shirosu<xfreell@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "linglong_store_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
systemstat = "0.2"
once_cell = "1.19"
tauri-plugin-zustand = "1"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
portable-pty = "0.8"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-single-instance = "2"
libc = "0.2.178"
reqwest = { version = "0.12", features = ["json"] }
